split schema and events
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@3449 8ebf8b4e-06f3-0310-961f-89f74618be54